{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "ShipControls",
            "id": "96f838a1-d18b-4f8d-90b8-df3c8318d568",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Value",
                    "id": "d7bd25f7-5fc0-440b-a97b-1ebc915f6607",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "ff7a1552-1864-4424-98fb-3bc17a5bddf4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "ce9103c2-cc54-4d1f-b735-7d6d9d27fe4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reverse",
                    "type": "Button",
                    "id": "2cb2c8d3-6379-44ef-a70c-a4986d259a52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "2844d7e9-831d-4a3f-abae-0550a251fc11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "331c6cab-0e29-44e5-9a37-4130dd54766d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76963858-0f0c-413f-8ff7-babbc5ade457",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea9f2f26-7b7d-4230-a2db-77d16fc2deea",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3889c99c-4df6-4541-9f39-975b97840cbe",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84505eee-c71d-401b-af79-d03dc5c75ea3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}